[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Originals/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Themes/ExtraLargeFontTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Themes/SmallFontTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Themes/MainMenuButtons.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="TextureRect" parent="."]
rect_scale = Vector2( 0.639687, 0.626658 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer"]
margin_right = 896.0
margin_bottom = 40.0
theme = ExtResource( 2 )
text = "Node Traversal"
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="MarginContainer/Control/VBoxContainer"]
margin_top = 44.0
margin_right = 896.0
margin_bottom = 59.0
theme = ExtResource( 3 )
text = "by 50 Shades of Marek"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer"]
margin_top = 63.0
margin_right = 896.0
margin_bottom = 191.0
custom_constants/margin_right = 256
custom_constants/margin_top = 64
custom_constants/margin_left = 32
custom_constants/margin_bottom = 64
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="MarginContainer/Control/VBoxContainer/MarginContainer"]
margin_left = 32.0
margin_top = 64.0
margin_right = 640.0
margin_bottom = 64.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Control"]
anchor_right = 0.6
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_constants/separation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Control/VBoxContainer"]
margin_right = 364.0
margin_bottom = 20.0
text = "New Game"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Control/VBoxContainer"]
margin_top = 38.0
margin_right = 364.0
margin_bottom = 58.0
custom_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Control/VBoxContainer/HBoxContainer"]
margin_right = 126.0
margin_bottom = 20.0
theme = ExtResource( 4 )
text = "Load Level"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 150.0
margin_bottom = 20.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 7

[node name="ContinueGame" type="Button" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Control/VBoxContainer"]
visible = false
margin_top = 76.0
margin_right = 364.0
margin_bottom = 96.0
text = "Continue"
align = 0

[node name="ExitGame" type="Button" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Control/VBoxContainer"]
margin_top = 76.0
margin_right = 364.0
margin_bottom = 96.0
text = "Exit"
align = 0
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/MarginContainer/Control/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/MarginContainer/Control/VBoxContainer/ExitGame" to="." method="_on_ExitGame_pressed"]
